# android-propd-for-linux

./: .gitignore  CMakeLists.txt  Makefile  PropertyServer.cpp  PropertyServer.h
client/: Makefile  getprop.c  properties.c  properties.h  service.c  setprop.c
cserver/: Makefile  list.h  main.c  propd.c  propd.h  slist.c  slist.h
lib/: Makefile  getprop.c  properties.h
server/: List.h  Makefile  PropertyServer.cpp  PropertyServer.h  README.md  main.c  main.cpp  propd.cpp  propd.h
